crates/descar-core/tests/snapshots/token_kind_snapshot_tests__identifier_ascii_empty.snap
---
source: crates/descar-core/tests/token_kind_snapshot_tests.rs
expression: "TokenKind::IdentifierAscii(ident).to_string()"
---
"identifier ''"
