crates/descar-core/tests/snapshots/token_kind_snapshot_tests__identifier_unicode.snap
---
source: crates/descar-core/tests/token_kind_snapshot_tests.rs
expression: "TokenKind::IdentifierUnicode(ident).to_string()"
---
"identifier 'προεδομή'"
