crates/descar-core/tests/snapshots/token_kind_snapshot_tests__keyword_nullptr.snap
---
source: crates/descar-core/tests/token_kind_snapshot_tests.rs
expression: "TokenKind::KeywordNullptr.to_string()"
---
"'nullptr'"
