crates/descar-core/tests/snapshots/token_kind_snapshot_tests__multiline_comment.snap
---
source: crates/descar-core/tests/token_kind_snapshot_tests.rs
expression: "TokenKind::MultilineComment.to_string()"
---
"multiline comment"
