crates/descar-core/tests/snapshots/token_kind_snapshot_tests__numeric.snap
---
source: crates/descar-core/tests/token_kind_snapshot_tests.rs
expression: "TokenKind::Numeric(num.clone()).to_string()"
---
"number '123'"
