crates/descar-core/tests/snapshots/token_kind_snapshot_tests__numeric_literals.snap
---
source: crates/descar-core/tests/token_kind_snapshot_tests.rs
expression: tokens
---
[
    Ok(
        Numeric(
            Integer(
                123,
            ),
        ),
    ),
    Ok(
        Numeric(
            UnsignedInteger(
                45,
            ),
        ),
    ),
    Ok(
        Numeric(
            Float32(
                6.7,
            ),
        ),
    ),
    Ok(
        Numeric(
            Scientific64(
                8.9,
                10,
            ),
        ),
    ),
    Ok(
        Numeric(
            Float64(
                3.0,
            ),
        ),
    ),
    Ok(
        Numeric(
            Scientific32(
                1.0,
                3,
            ),
        ),
    ),
    Ok(
        Numeric(
            Float64(
                123.456,
            ),
        ),
    ),
    Ok(
        Binary(
            UnsignedInteger(
                10,
            ),
        ),
    ),
    Ok(
        Octal(
            Integer(
                511,
            ),
        ),
    ),
    Ok(
        Hexadecimal(
            UnsignedInteger(
                431,
            ),
        ),
    ),
    Ok(
        Hexadecimal(
            Integer(
                3735928559,
            ),
        ),
    ),
]
