crates/descar-core/tests/snapshots/token_kind_snapshot_tests__octal.snap
---
source: crates/descar-core/tests/token_kind_snapshot_tests.rs
expression: "TokenKind::Octal(num.clone()).to_string()"
---
"octal '123'"
