crates/descar-core/tests/snapshots/token_kind_snapshot_tests__operators.snap
---
source: crates/descar-core/tests/token_kind_snapshot_tests.rs
expression: tokens
---
[
    Ok(
        PlusEqual,
    ),
    Ok(
        MinusEqual,
    ),
    Ok(
        EqualEqual,
    ),
    Ok(
        Equal,
    ),
    Ok(
        NotEqual,
    ),
    Ok(
        LessEqual,
    ),
    Ok(
        GreaterEqual,
    ),
    Ok(
        PlusPlus,
    ),
    Ok(
        MinusMinus,
    ),
    Ok(
        OrOr,
    ),
    Ok(
        AndAnd,
    ),
    Ok(
        ShiftLeft,
    ),
    Ok(
        ShiftRight,
    ),
    Ok(
        PercentEqual,
    ),
    Ok(
        XorEqual,
    ),
    Ok(
        Plus,
    ),
    Ok(
        Minus,
    ),
    Ok(
        Star,
    ),
    Ok(
        Slash,
    ),
    Ok(
        Less,
    ),
    Ok(
        Greater,
    ),
    Ok(
        Not,
    ),
    Ok(
        Xor,
    ),
    Ok(
        Percent,
    ),
    Ok(
        Or,
    ),
    Ok(
        And,
    ),
    Ok(
        Equal,
    ),
    Ok(
        Colon,
    ),
    Ok(
        Comma,
    ),
    Ok(
        Dot,
    ),
]
