crates/descar-core/tests/snapshots/token_kind_snapshot_tests__operators_single_and_multi_char.snap
---
source: crates/descar-core/tests/token_kind_snapshot_tests.rs
expression: input_result
---
[
    (
        Plus,
        "'+'",
    ),
    (
        PlusPlus,
        "'++'",
    ),
    (
        MinusMinus,
        "'--'",
    ),
    (
        PlusEqual,
        "'+='",
    ),
    (
        MinusEqual,
        "'-='",
    ),
    (
        Minus,
        "'-'",
    ),
    (
        Star,
        "'*'",
    ),
    (
        Slash,
        "'/'",
    ),
    (
        Percent,
        "'%'",
    ),
    (
        PercentEqual,
        "'%='",
    ),
    (
        Equal,
        "'='",
    ),
    (
        EqualEqual,
        "'=='",
    ),
    (
        NotEqual,
        "'!='",
    ),
    (
        Less,
        "'<'",
    ),
    (
        LessEqual,
        "'<='",
    ),
    (
        Greater,
        "'>'",
    ),
    (
        GreaterEqual,
        "'>='",
    ),
    (
        AndAnd,
        "'&&'",
    ),
    (
        OrOr,
        "'||'",
    ),
    (
        Not,
        "'!'",
    ),
    (
        And,
        "'&'",
    ),
    (
        Or,
        "'|'",
    ),
    (
        Xor,
        "'^'",
    ),
    (
        XorEqual,
        "'^='",
    ),
    (
        ShiftLeft,
        "'<<'",
    ),
    (
        ShiftRight,
        "'>>'",
    ),
]
